--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -8,3 +8,26 @@ RUN apk update && \
 WORKDIR /app
 
 CMD ["yarn", "develop"]
+
+################################################################################
+
+FROM dev as build
+
+ADD . ./
+
+RUN yarn && \
+    gatsby build --prefix-paths
+
+################################################################################
+
+FROM nginx:1.20.1-alpine as nginx
+
+COPY --from=build /app/public /app/public
+
+RUN rm /etc/nginx/conf.d/default.conf
+
+COPY .docker/nginx/nginx.conf /etc/nginx/nginx.conf
+
+WORKDIR /app
+
+CMD ["nginx", "-g", "daemon off;"]
