--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "develop": "gatsby develop -H 0.0.0.0",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "test": "jest"
   },
   "dependencies": {
+    "babel-jest": "^27.0.2",
+    "babel-preset-gatsby": "^1.7.1",
     "gatsby": "^3.6.2",
     "gatsby-plugin-sass": "^4.7.0",
+    "jest": "^27.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.34.1"
