--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "babel-jest": "^27.0.2",
     "babel-preset-gatsby": "^1.7.1",
+    "bulma": "^0.9.2",
     "gatsby": "^3.6.2",
     "gatsby-plugin-sass": "^4.7.0",
     "jest": "^27.0.4",
