--- a/package.json
+++ b/package.json
@@ -15,14 +15,23 @@
     "test": "jest"
   },
   "dependencies": {
-    "babel-jest": "^27.0.2",
-    "babel-preset-gatsby": "^1.7.1",
-    "bulma": "^0.9.2",
-    "gatsby": "^3.6.2",
-    "gatsby-plugin-sass": "^4.7.0",
-    "jest": "^27.0.4",
+    "bulma": "^0.9.3",
+    "gatsby": "^3.8.0",
+    "gatsby-plugin-sass": "^4.8.0",
+    "gatsby-source-filesystem": "^3.8.0",
+    "gatsby-transformer-remark": "^4.5.0",
+    "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.34.1"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "babel-jest": "^27.0.2",
+    "babel-preset-gatsby": "^1.7.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.0.4",
+    "react-test-renderer": "^17.0.2"
   }
 }
