--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "bulma": "^0.9.2",
     "gatsby": "^3.6.2",
     "gatsby-plugin-sass": "^4.7.0",
+    "gatsby-source-filesystem": "^3.8.0",
+    "gatsby-transformer-remark": "^4.5.0",
     "jest": "^27.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
