--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-source-filesystem": "^3.8.0",
     "gatsby-transformer-remark": "^4.5.0",
     "jest": "^27.0.4",
+    "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.34.1"
