--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.34.1"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "identity-obj-proxy": "^3.0.0"
   }
 }
