--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-jest": "^27.0.2",
     "babel-preset-gatsby": "^1.7.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.0.4"
+    "jest": "^27.0.4",
+    "react-test-renderer": "^17.0.2"
   }
 }
