--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -3,6 +3,7 @@ FROM node:16-alpine3.11 as dev
 RUN apk update && \
     apk upgrade && \
     apk add git && \
+    apk add nasm && \
     yarn global add gatsby-cli
 
 WORKDIR /app
