--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bulma": "^0.9.3",
     "gatsby": "^3.8.0",
+    "gatsby-plugin-image": "^1.9.0",
     "gatsby-plugin-sass": "^4.8.0",
     "gatsby-source-filesystem": "^3.8.0",
     "gatsby-transformer-remark": "^4.5.0",
