--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^3.8.0",
     "gatsby-plugin-image": "^1.9.0",
     "gatsby-plugin-sass": "^4.8.0",
+    "gatsby-plugin-sharp": "^3.9.0",
     "gatsby-source-filesystem": "^3.8.0",
     "gatsby-transformer-remark": "^4.5.0",
     "ramda": "^0.27.1",
