--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-functional-lifecycle": "^3.0.0",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-observable": "^2.0.0",
+    "rxjs": "^7.2.0",
     "sass": "^1.34.1"
   },
   "devDependencies": {
