--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "jest"
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "bulma": "^0.9.3",
